@@ -1,12 +1,36 @@
 import Dependencies._
 
-ThisBuild / scalaVersion     := "2.12"
+ThisBuild / scalaVersion     := "2.12.15"
 ThisBuild / version          := "0.1.0-SNAPSHOT"
 ThisBuild / organization     := "com.example"
 ThisBuild / organizationName := "example"
 
+resolvers += "Maven Central" at "https://repo1.maven.org/maven2"
+
+lazy val commonSettings = Seq(
+  Test / classLoaderLayeringStrategy := ClassLoaderLayeringStrategy.ScalaLibrary,
+  Test / fork := true,
+  Test / javaOptions ++= Seq(
+    "--add-opens=java.base/java.lang=ALL-UNNAMED",
+    "--add-opens=java.base/java.lang.invoke=ALL-UNNAMED",
+    "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
+    "--add-opens=java.base/java.io=ALL-UNNAMED",
+    "--add-opens=java.base/java.net=ALL-UNNAMED",
+    "--add-opens=java.base/java.nio=ALL-UNNAMED",
+    "--add-opens=java.base/java.util=ALL-UNNAMED",
+    "--add-opens=java.base/java.util.concurrent=ALL-UNNAMED",
+    "--add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED",
+    "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
+    "--add-opens=java.base/sun.nio.cs=ALL-UNNAMED",
+    "--add-opens=java.base/sun.security.action=ALL-UNNAMED",
+    "--add-opens=java.base/sun.util.calendar=ALL-UNNAMED",
+    "--add-opens=java.security.jgss/sun.security.krb5=ALL-UNNAMED"
+  )
+)
+
 lazy val commonClasses = (project in file("platform/common-classes"))
   .settings(
+    commonSettings,
     name := "Common Classes",
     libraryDependencies ++= Seq(
       "org.scalatest" %% "scalatest" % "3.2.9" % Test,
@@ -17,6 +41,7 @@ lazy val commonClasses = (project in file("platform/common-classes"))
 
 lazy val domainA = (project in file("subdomains/domain-A"))
   .settings(
+    commonSettings,
     name := "Domain A",
     libraryDependencies ++= Seq(
       "org.scalatest" %% "scalatest" % "3.2.9" % Test,
@@ -26,17 +51,45 @@ lazy val domainA = (project in file("subdomains/domain-A"))
   )
   .dependsOn(commonClasses)
 
-lazy val root = (project in file("."))
-  .aggregate(commonClasses, domainA)
-  .dependsOn(commonClasses)
+lazy val subdomain1to4 = (project in file("subdomains/1to4"))
   .settings(
+    commonSettings,
+    name := "Subdomain 1to4",
+    libraryDependencies ++= Seq(
+      "org.scalatest" %% "scalatest" % "3.2.9" % Test,
+      "org.apache.spark" %% "spark-core" % "3.5.1" % Provided,
+      "org.apache.spark" %% "spark-sql" % "3.5.1" % Provided
+    ),
+    Compile / scalaSource := baseDirectory.value / "src" / "main" / "scala",
+    Test / scalaSource := baseDirectory.value / "src" / "test" / "scala"
+  )
+  .dependsOn(commonClasses)
+
+lazy val subdomain5to8 = (project in file("subdomains/5to8"))
+  .settings(
+    commonSettings,
+    name := "Subdomain 5to8",
+    libraryDependencies ++= Seq(
+      "org.scalatest" %% "scalatest" % "3.2.9" % Test,
+      "org.apache.spark" %% "spark-core" % "3.5.1" % Provided,
+      "org.apache.spark" %% "spark-sql" % "3.5.1" % Provided
+    ),
+    Compile / scalaSource := baseDirectory.value / "src" / "main" / "scala",
+    Test / scalaSource := baseDirectory.value / "src" / "test" / "scala"
+  )
+  .dependsOn(commonClasses)
+
+lazy val root = (project in file("."))
+  .aggregate(commonClasses, domainA, subdomain1to4, subdomain5to8)
+  .dependsOn(commonClasses, subdomain1to4, subdomain5to8)
+  .settings(
+    commonSettings,
     name := "Testing Devin Code Migrations Scala",
     libraryDependencies ++= Seq(
       "org.scalatest" %% "scalatest" % "3.2.9" % Test,
       "org.apache.spark" %% "spark-core" % "3.5.1" % Provided,
       "org.apache.spark" %% "spark-sql" % "3.5.1" % Provided,
       "org.scalameta" %% "munit" % "0.7.29" % Test
-    )
+    ),
+    Test / scalaSource := baseDirectory.value / "src" / "test" / "scala"
   )
-
-// See https://www.scala-sbt.org/1.x/docs/Using-Sonatype.html for instructions on how to publish to Sonatype.
